[package]
name = "telnet-chat"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"]}
tokio-util = { version = "0.6", features = ["codec"]}
futures = "0.3"
bytes = "1"