[package]
name = "async-io-example"
version = "0.1.0"
authors = ["iamazy <1448588084@qq.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = { version = "0.7", features = ["net", "os-poll"]}
failure = "0.1"

[dev-dependencies]
env_logger = "0.8"